Bug fixes and add image resize
- Cursors were out of place
- Improve performance in getting summary of the note's content
- Add a script to migrate quilljs to tiptap

--- a/src/styles/note-editor.scss
+++ b/src/styles/note-editor.scss
@@ -5,7 +5,7 @@
     height: 100%;
 }
 
-.contenteditable-wrapper {
+.editor-container {
     overflow: auto;
     border: none;
     font-size: 1rem;
@@ -28,6 +28,10 @@
         code {
             display: block;
         }
+    }
+
+    img {
+        max-width: 100%;
     }
 }
 
@@ -69,6 +73,7 @@ $hover-background: darken($primary, 25%);
     border-bottom: 1px solid #eee;
     padding: 0 36px;
     flex-basis: auto;
+    flex-wrap: wrap;
 
     &__button {
         padding: .5rem;
@@ -145,12 +150,24 @@ $hover-background: darken($primary, 25%);
     font-family: monospace;
 }
 .editor-top-shadow {
-    position: absolute;
     z-index: 1;
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.5), 0 3px 6px rgba(0, 0, 0, 0.73);
-    top: -1px;
-    left: 0;
-    right: 0;
     height: 1px;
-    opacity: 0;
+    margin-top: -1px;
+}
+.img-resizer {
+    box-sizing: border-box;
+    z-index: 1;
+    box-shadow: 0 0 1px 1px $black;
+}
+.img-resize-preview {
+    background-color: $white;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0.2;
+    pointer-events: none;
+    position: absolute;
+    z-index: 1;
 }
